--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1626,6 +1626,10 @@ table.vouchers-table{
     border-collapse:collapse;
 }
 
+table .user-cell {
+  min-width: 150px;
+}
+
 table.vouchers-table th {
   font: 0.9em "AmsiPro-Bold", sans-serif;
   border: 1px solid;
