--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -8,10 +8,10 @@
         <p class="faq-question">1. ¿Cómo hago para participar?</p>
         <div class="faq-answer">
           <ul>
-            <li>Comprar un pack de productos Patagonia en cualquiera de sus presentaciones adheridas a la promo.</li>
+            <li>Comprando un pack de productos Patagonia en cualquiera de sus presentaciones adheridas a la promoción en los puntos de venta adheridos.</li>
             <li>Buscar el código oculto que aparece en el pack.</li>
-            <li>Ingresar a la web www.viajaconpatagonia.com.py</li>
-            <li>Ingresar el código oculto para empezar a acumular kilómetros que te permitirán canjear por premios de la marca, o si sos una de las 12 primeras personas en acumular 2.640 kilómetros, te ganas un viaje a Bariloche con un acompañante para conocer la Microcervecería de Patagonia.</li>
+            <li>Ingresar a la web www.viajaconpatagonia.com.py  </li>
+            <li>Ingresar el código oculto para empezar a acumular kilómetros que te permitirán canjear por premios de la marca, o si sos una de las 10 primeras personas en acumular 2.640 kilómetros, te ganas un viaje a Bariloche con un acompañante para conocer la Micro cervecería de Patagonia.</li>
           </ul>
         </div>
       </div>
@@ -19,19 +19,19 @@
         <p class="faq-question">2. ¿Cuánto vale cada pack?</p>
         <div class="faq-answer">
           <ul>
-            <li>Chopp de 300ml = 15 kms</li>
-            <li>Pack de 2 unidades de 710ml = 20 kms</li>
-            <li>Pack de 6 unidades de 355ml = 30 kms</li>
-            <li>Pack de 4 unidades de 710ml = 40 kms</li>
-            <li>Pack de 6 unidades de 473ml = 50 kms</li>
-            <li>Pack de 6 unidades de 710ml = 60 kms</li>
+            <li>Chopp = 10 kms</li>
+            <li>Pack de 4 unidades de 355ml = 25 kms</li>
+            <li>Pack de 6 unidades de 473ml de la variedad 24.7 = 40 kms</li>
+            <li>Pack de 6 unidades de 473ml variedades Amber Lager y Weisse = 35 kms</li>
+            <li>Pack de 4 unidades de 730ml = 30 kms</li>
           </ul>
         </div>
       </div>
       <div class="faq-question-wrapper">
         <p class="faq-question">3. ¿Dónde puedo conseguir los packs/productos que participan??</p>
         <div class="faq-answer">
-          Podes encontrarlos en supermercados, bodegas, estaciones de servicio. También en bares o restaurantes que se comunicará previamente en nuestras redes sociales.
+          Podes encontrarlos en los principales Supermercados, Bodegas, Estaciones de Servicios de Asunción, Ciudad del Este y Encarnación. También en Bares y Restaurantes que comunicaremos previamente en nuestras redes sociales.
+
         </div>
       </div>
       <div class="faq-question-wrapper">
@@ -40,26 +40,34 @@
           <ul>
             <li>Un viaje a Bariloche: 2640kms</li>
             <li>Mochila: 200kms</li>
-            <li>Buzo: 150kms</li>
-            <li>Gorro: 100kms</li>
+            <li>Gorro: 80kms</li>
             <li>Growler: 80kms</li>
-            <li>Remera: 80kms</li>
-            <li>Vaso Nonic: 60kms</li>
-            <li>Vaso Riegse: 60kms</li>
+            <li>Remera: 100kms</li>
+            <li>Vaso 60kms</li>
             <li>Vale de Consumición: 60kms</li>
+            <li>Abridor: 40kms</li>
           </ul>
         </div>
       </div>
       <div class="faq-question-wrapper">
         <p class="faq-question">5. ¿Dónde puedo canjear mis premios?</p>
         <div class="faq-answer">
-          Tenemos habilitados 2 puntos de canje en Asunción (me faltan los datos) a los cuales podes acercarte con tu voucher electrónico (no es necesario imprimirlo, podés mostrarlo desde la pantalla de tu celular). En algunas ocasiones tendremos habilitados algunos puntos de canje adicionales, para saber más ingreso a nuestras sociales, Facebook e Instagram. Si sos del interior del país, (aquí necesito la info para saber como esa gente va a poder canjear sus premios).
+          Tenemos habilitados los siguientes centros de canje en Asunción:
+          <ul>
+            <li>Refugio Patagonia Recoleta – Alberto de Souza esq Cruz del Chaco</li>
+            <li>Gondola Patagonia Foodpark Mburucuya</li>
+            <li>Bodega del Mundo Palma</li>
+          </ul>
+          Podes acercarte con tu voucher electrónico (no es necesario imprimirlo, podés mostrarlo desde la pantalla de tu celular). 
+
+<br><br>En algunas ocasiones tendremos habilitados algunos puntos de canje adicionales, para saber más ingresa a nuestras sociales, Facebook e Instagram.
+
         </div>
       </div>
       <div class="faq-question-wrapper">
         <p class="faq-question">6. ¿Hasta cuándo puedo participar?</p>
         <div class="faq-answer">
-          Hasta el 31 de Octubre de 2018.
+          La promoción tiene vigencia hasta el 31 de Mayo del 2019 o hasta que los primeros 10 consumidores lleguen a 2640kms y ganen el viaje a nuestra Micro cervecería. 
         </div>
       </div>
       <div class="faq-question-wrapper">
@@ -69,7 +77,7 @@
         </div>
       </div>
       <div class="faq-question-wrapper">
-        <p class="faq-question">3. ¿Qué hago si no me acepta un código que intento cargar?</p>
+        <p class="faq-question">8. ¿Qué hago si no me acepta un código que intento cargar?</p>
         <div class="faq-answer">
           En esta misma página encontrarás la opción de enviarnos un mensaje, indicándonos el inconveniente y tus datos (nombre, dirección de correo, celular) y nos pondremos en contacto para solucionarlo a la brevedad.
         </div>
