--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -85,7 +85,7 @@
     </div>
     <div class="faqs-form">
       <p>¡Envianos tus consultas!</p>
-      <form>
+      <form method="POST" action="/enviar-consulta">
         <div>
           <label for="">Email</label>
           <input type="email" name="" id="">
