--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -16,7 +16,7 @@
     
     <div class="canje-item-wrapper">
       <div class="canje-item">
-        {{#if available}}<div class="image-item-container active" style="background-image: url('images/avion-w.svg')"></div>{{/if}}
+        {{#if available}}<div class="image-item-container active" style="background-image: url('images/avion-c.jpg'); background-size: cover;"></div>{{/if}}
         {{#unless available}}
         <div class="image-item-container" style="background-image: url('images/avion-w.svg')"></div>
         <p>
