--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -18,7 +18,7 @@
       <div class="canje-item">
         {{#if available}}<div class="image-item-container active" style="background-image: url('images/avion-c.jpg'); background-size: cover;"></div>{{/if}}
         {{#unless available}}
-        <div class="image-item-container" style="background-image: url('images/avion-w.svg')"></div>
+        <div class="image-item-container" style="background-image: url('images/avion-c.jpg'); background-size: cover;"></div>
         <p>
           ¡Faltan
           <span> {{user.kmsToBariloche}} kms</span>
