--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -88,15 +88,15 @@
       <form method="POST" action="/enviar-consulta">
         <div>
           <label for="">Email</label>
-          <input type="email" name="" id="">
+          <input type="email" name="email" id="">
         </div>
         <div>
           <label for="">Celular</label>
-          <input type="celular" name="" id="">
+          <input type="celular" name="phone" id="">
         </div>
         <div class="text-area-wrapper">
           <label for="">Consulta</label>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <textarea name="consulta" id="" cols="30" rows="10"></textarea>
         </div>
         <button id="faq-button-submit" class="btn home-button">ENVIAR</button>
       </form>
