--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -880,6 +880,7 @@ header #menu-mobile-wrapper {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: #fff;
   opacity: 0.2;
 }
 
