--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -751,6 +751,7 @@ header #menu-mobile-wrapper {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: #fff;
   opacity: 0.2; }
 
 .image-item-container.active {
