--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -88,17 +88,18 @@
       <form method="POST" action="/enviar-consulta">
         <div>
           <label for="">Email</label>
-          <input type="email" name="email" id="">
+          <input type="email" name="email" id="consultar-email">
         </div>
         <div>
           <label for="">Celular</label>
-          <input type="celular" name="phone" id="">
+          <input type="celular" name="phone" id="consultar-phone">
         </div>
         <div class="text-area-wrapper">
           <label for="">Consulta</label>
-          <textarea name="consulta" id="" cols="30" rows="10"></textarea>
+          <textarea name="consulta" id="consultar-mensaje" cols="30" rows="10"></textarea>
         </div>
-        <button id="faq-button-submit" class="btn home-button">ENVIAR</button>
+        <p id="consultar-return-message"></p>
+        <button id="consultar-button" class="btn home-button">ENVIAR</button>
       </form>
     </div>
   </div>
