--- a/views/admin/listaUsuarios.hbs
+++ b/views/admin/listaUsuarios.hbs
@@ -13,10 +13,9 @@
      <div class="form-home-wrapper-steps" style="background: transparent; width: 100%;">
       <img src="/images/logo-color.png" alt="" class="logo-home">
      </div>
-     {{!-- <div class="navigation-wrapper">
+     <div class="navigation-wrapper">
        <a href="/vouchers-totales">Vouchers Canjeados</a>
-       {{!-- <a href="/premios-totales">Premios Entregados</a> --}}
-     </div> --}}
+     </div>
    <div class="step-counter-code vouchers-canjeados">
        <span>TOTAL USUARIOS DE LA APLICACIÓN: {{users.length}}</span>
     </div>
