--- a/views/admin/voucherControl.hbs
+++ b/views/admin/voucherControl.hbs
@@ -14,10 +14,9 @@
       <img src="/images/logo-color.png" alt="" class="logo-home">
      </div>
       
-     {{!-- <div class="navigation-wrapper">
+     <div class="navigation-wrapper">
        <a href="/canjes-realizados">Canjes Realizados</a>
-       {{!-- <a href="/premios-entregados">Premios Entregados</a> --}}
-     </div> --}}
+     </div>
    <div class="step-counter-code">
        <span>VOUCHER</span>
     </div>
