--- a/views/error.hbs
+++ b/views/error.hbs
@@ -15,7 +15,7 @@
       <img src="/images/logo-color.png" alt="" class="logo">
     </a>
     <div class="message-error-wrapper">
-      <img src="images/beer-bottle.svg" alt="">
+      <img src="images/beer-bottle.png" alt="">
       <div class="text-error-wrapper">
         <h3>¡Éste es un Error 500! <br> En nuestros servidores ha pasado algo muy malo y no podemos mostrar esta página!</h3>
         <p>Pero tranquilo, mientras nuestros técnicos se ponen a arreglar los problemas, tomate una cerveza y volvé en un rato!</p>
