--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -15,7 +15,7 @@
       <img src="/images/logo-color.png" alt="" class="logo">
     </a>
     <div class="message-error-wrapper">
-      <img src="images/beer-bottle.svg" alt="">
+      <img src="images/beer-bottle.png" alt="">
       <div class="text-error-wrapper">
         <h3>Ups! Error 404! <br> No pudimos encontrar la página que estás buscando!</h3>
         <p>Pero tranquilo, tomáte una cerveza y volvé a revisar si la dirección que ingresaste está bien!</p>
