--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,16 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Cerveza Patagonia</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135431410-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135431410-1');
+</script>
+
 <body>
   <div class="body-wrapper">
     <header>
