--- a/views/registro/recuperarPass.hbs
+++ b/views/registro/recuperarPass.hbs
@@ -6,6 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135431410-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135431410-1');
+</script>
+
   <title>Cerveza Patagonia</title>
 </head>
 <body>
