--- a/views/registro/registroUno.hbs
+++ b/views/registro/registroUno.hbs
@@ -45,7 +45,7 @@
         {{/if}}
         </fieldset>
         <fieldset>
-          <input type="text" name="dni" autocomplete="off">
+          <input type="number" name="dni" autocomplete="off">
           <label for="">Cédula/Pasaporte</label>
         </fieldset>
         <fieldset>
