--- a/views/registro/index.hbs
+++ b/views/registro/index.hbs
@@ -18,6 +18,12 @@
   <title>Cerveza Patagonia</title>
 </head>
 <body>
+  <div id="tutorial-wrapper">
+    <img src="/images/error.svg" alt="" id="close-pop-up">
+    <div class="tutorial-image-wrapper">
+
+    </div>
+  </div>
   <div class="home-wrapper">
     <div class="landscape-wrapper">
 
