--- a/views/admin/listaUsuarios.hbs
+++ b/views/admin/listaUsuarios.hbs
@@ -14,7 +14,8 @@
       <img src="/images/logo-color.png" alt="" class="logo-home">
      </div>
      <div class="navigation-wrapper">
-       <a href="/vouchers-totales">Vouchers Canjeados</a>
+        <a href="/info-promo">Info Promo</a>
+        <a href="/vouchers-totales">Vouchers Canjeados</a>
      </div>
    <div class="step-counter-code vouchers-canjeados">
        <span>TOTAL USUARIOS DE LA APLICACIÓN: {{users.length}}</span>
