--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1903,5 +1903,14 @@ table.vouchers-table td {
 .info-wrapper-container { 
   width: 100%;
 }
+
+.tutorial-image-wrapper {
+  background-image: url('../images/tutorial-mobile.jpg');
+}
+
+#tutorial-wrapper img {
+  top: 30px;
+  right: 30px;
+}
 }
 
