--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1906,11 +1906,13 @@ table.vouchers-table td {
 
 .tutorial-image-wrapper {
   background-image: url('../images/tutorial-mobile.jpg');
+  top: 8vh;
 }
 
 #tutorial-wrapper img {
   top: 30px;
   right: 30px;
+  width: 35px;
 }
 }
 
