--- a/views/admin/vouchersTotales.hbs
+++ b/views/admin/vouchersTotales.hbs
@@ -14,6 +14,7 @@
       <img src="/images/logo-color.png" alt="" class="logo-home">
      </div>
      <div class="navigation-wrapper">
+       <a href="/info-promo">Info Promo</a>
        <a href="/usuarios">LISTA USUARIOS</a>
      </div>
    <div class="step-counter-code vouchers-canjeados">
