--- a/views/admin/infoPromo.hbs
+++ b/views/admin/infoPromo.hbs
@@ -16,6 +16,7 @@
      <div class="navigation-wrapper">
        <a href="/usuarios">LISTA USUARIOS</a>
        <a href="/vouchers-totales">Vouchers Canjeados</a>
+       <a href="/vouchers-generados">Vouchers Generados</a>
      </div>
    <div class="step-counter-code vouchers-canjeados">
        <span>INFO DE LA APLICACIÓN</span>
