--- a/views/admin/listaUsuarios.hbs
+++ b/views/admin/listaUsuarios.hbs
@@ -16,6 +16,7 @@
      <div class="navigation-wrapper">
         <a href="/info-promo">Info Promo</a>
         <a href="/vouchers-totales">Vouchers Canjeados</a>
+        <a href="/vouchers-generados">Vouchers Generados</a>
      </div>
    <div class="step-counter-code vouchers-canjeados">
        <span>TOTAL USUARIOS DE LA APLICACIÓN: {{users.length}}</span>
