--- a/views/admin/voucherGeneradosTotal.hbs
+++ b/views/admin/voucherGeneradosTotal.hbs
@@ -16,10 +16,10 @@
      <div class="navigation-wrapper">
        <a href="/info-promo">Info Promo</a>
        <a href="/usuarios">LISTA USUARIOS</a>
-       <a href="/vouchers-generados">Vouchers Generados</a>
+       <a href="/vouchers-totales">Vouchers Canjeados</a>
      </div>
    <div class="step-counter-code vouchers-canjeados">
-       <span>TOTAL VOUCHERS CANJEADOS: {{vouchers.length}}</span>
+       <span>TOTAL VOUCHERS GENERADOS: {{vouchers.length}}</span>
     </div>
     <table class="vouchers-table">
       <tr>
