--- a/views/admin/voucherControl.hbs
+++ b/views/admin/voucherControl.hbs
@@ -13,7 +13,9 @@
      <div class="form-home-wrapper-steps" style="background: transparent; width: 100%;">
       <img src="/images/logo-color.png" alt="" class="logo-home">
      </div>
-      
+      <div class="navigation-wrapper">
+       <a href="/canjes-realizados">Canjes Realizados</a>
+     </div>
      
 
 
