--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -85,7 +85,7 @@
     </div>
     <div class="faqs-form">
       <p>¡Envianos tus consultas!</p>
-      <form method="POST" action="/enviar-consulta">
+      <form method="POST" action="/enviar-consulta" class="consulta-form">
         <div>
           <label for="">Email</label>
           <input type="email" name="email" id="consultar-email">
