--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -51,7 +51,7 @@
       1.2	Los LOCALES ADHERIDOS a esta PROMOCION serán aquellos de las principales cadenas de Supermercados, Bodegas, Restaurantes y Bares que serán individualizados con materiales publicitarios de la PROMOCION, y que se encontrarán en las ciudades de Asunción, Gran Asunción, Encarnación y Ciudad del Este, no siendo esta lista taxativa, pudiendo haber LOCALES ADHERIDOS en otras ciudades de la República del Paraguay. La lista completa de los LOCALES ADHERIDOS figurará en la página web www.viajaconpatagonia.com.py.-
     </p>
     <p class="bases-description">
-      1.3	La PROMOCION se extenderá desde el 25 de Febrero del 2.019 hasta el 31 de Mayo del 2.019 inclusive, o hasta que diez (10) PARTICIPANTES acumulen los Kilómetros necesarios para canjear los premios señalados en el inciso a) del apartado 2.1., conforme se explica más abajo en estas BASES. 
+      1.3	La PROMOCION se extenderá desde el 01 de Marzo hasta el 31 de Mayo del 2.019 inclusive, o hasta que diez (10) PARTICIPANTES acumulen los Kilómetros necesarios para canjear los premios señalados en el inciso a) del apartado 2.1., conforme se explica más abajo en estas BASES. 
     </p>
 
     <p class="bases-title">2.	PREMIOS AFECTADOS A LA PROMOCION </p>
@@ -98,7 +98,7 @@ b)	Comprando cualquiera de las variedades de la cerveza Patagonia en su versión
 
     </p>
     <p class="bases-description">
-      3.2	Los PARTICIPANTES deberán acceder a la página web www.viajaconpatagonia.com.py, crearse un perfil de usuario, y cargar los códigos ocultos que hubieren conseguido de alguna de las formas señaladas en los incisos a) y b) del apartado 3.1 que antecede. Cada código oculto cargará al perfil del PARTICIPANTE los kilómetros que le correspondan, de acuerdo al detalle señalado en el apartado anterior. Cada PARTICIPANTE podrá cargar kilómetros por un valor de hasta Gs. 500.000 por día. Los kilómetros serán acumulables durante toda la vigencia de la PROMOCION, y los PARTICIPANTES podrán obtener códigos ocultos ilimitadamente durante dicho plazo, pero con la limitación de carga señalada anteriormente.
+      3.2 Los PARTICIPANTES deberán acceder a la página web www.viajaconpatagonia.com.py, crearse un perfil de usuario, y cargar los códigos ocultos que hubieren conseguido de alguna de las formas señaladas en los incisos a) y b) del apartado 3.1 que antecede. Cada código oculto cargará al perfil del PARTICIPANTE los kilómetros que le correspondan, de acuerdo al detalle señalado en el apartado anterior. Los kilómetros serán acumulables durante toda la vigencia de la PROMOCION, y los PARTICIPANTES podrán obtener códigos ocultos ilimitadamente durante dicho plazo.
     </p>
     <p class="bases-description">
      3.3	En cualquier momento durante el periodo de vigencia de la PROMOCION, los PARTICIPANTES podrán canjear sus kilómetros por los premios correspondientes, según la tabla de equivalencia kilómetros/premios que estará subida a la página web señalada anteriormente. Una vez canjeados kilómetros por premios determinados, estos kilómetros serán consumidos; es decir, se restarán los kilómetros utilizados por el PARTICIPANTE de los kilómetros que tenga acumulados. El proceso de canje de los PREMIOS será el siguiente, de acuerdo al tipo de PREMIO:
