--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -82,6 +82,24 @@
           En esta misma página encontrarás la opción de enviarnos un mensaje, indicándonos el inconveniente y tus datos (nombre, dirección de correo, celular) y nos pondremos en contacto para solucionarlo a la brevedad.
         </div>
       </div>
+       <div class="faq-question-wrapper">
+        <p class="faq-question">9. ¿Cómo son los packs de la promoción Pasaporte?</p>
+        <div class="faq-answer">
+          <div class="image-faq-container">
+<div class="faq-image-wrapper"><img src="/images/pack_1.png" alt=""></div>
+          <div class="faq-image-wrapper"><img src="/images/pack_2.png" alt=""></div>
+          <div class="faq-image-wrapper"><img class="bigger" src="/images/pack_3.png" alt=""></div>
+          <div class="faq-image-wrapper"><img class="bigger" src="/images/pack_4.png" alt=""></div>
+          </div>
+          
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">10. ¿Cuántos códigos puedo ingresar por día?</p>
+        <div class="faq-answer">
+          Podés ingresar hasta 5 códigos por día.
+        </div>
+      </div>
     </div>
     <div class="faqs-form">
       <p>¡Envianos tus consultas!</p>
