--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -31,7 +31,11 @@
         {{/unless}}
       </div>
       {{#if user.finalPrize}}
-        <button class="btn voucher voucher-button" id="voucher-generate" data-value="5c9388d54bf0178cca021b6d">CANJEAR</button>
+        {{#if user.prizeAvailable}}
+          <button class="btn voucher voucher-button" id="voucher-generate" data-value="5c9388d54bf0178cca021b6d">CANJEAR</button>
+          {{else}}
+          <p>Lo sentimos, ya tenemos 10 ganadores para el viaje a Bariloche. Pero puedes seguir canjeando tus puntos por otros premios!</p>
+        {{/if}}
       {{/if}}
     </div>
     </div>
