--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <meta name="description" itemprop="description" content="Viajá con Patagonia. Cada cerveza te lleva a Bariloche. Empezá a acumular kilómetros para viajar a conocer nuestra Microcerveria o canjearlos por premios exclusivos." />
+  <meta name="keywords" itemprop="keywords" content="Patagonia, Paraguay, Patagonia Paraguay, Concurso, Promoción, Promoción Patagonia, Viaja con Patagonia, Pasaporte Patagonia, Concurso Patagonia, Kilómetros Patagonia" />
+  <meta name="robots" content="index, follow" />
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135431410-1"></script>
