--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1885,6 +1885,10 @@ table.vouchers-table td {
     position: relative;
   }
 
+  .detail-item-wrapper {
+    min-width: 50%;
+  }
+  
   header .menu-mobile img {
     width: 25px;
   }
