--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1965,7 +1965,7 @@ table.vouchers-table td {
 }
 
 .info-wrapper-container { 
-  width: 100%;
+  width: 100% !important;
 }
 
 .tutorial-image-wrapper {
