--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -82,7 +82,7 @@
     {{/if}}
     {{/each}}
   </div>
-  <span style="color:#fff; font-size: 0.7rem">*Premios Exclusivos Sujetos a Stock</span>
+  <span style="color:#fff; font-size: 0.7rem">*Premios Exclusivos Sujetos a Stock</span><br>
   <span style="color:#fff; font-size: 0.7rem">**Solo válido para Asunción</span>
   <div class="api-response" id="response-message-voucher">
     <div class="response-wrapper">
