--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -49,16 +49,19 @@
           </ul>
         </div>
       </div>
+
       <div class="faq-question-wrapper">
         <p class="faq-question">5. ¿Dónde puedo canjear mis premios?</p>
         <div class="faq-answer">
           Tenemos habilitados los siguientes centros de canje en Asunción:
           <ul>
-            <li>Refugio Patagonia Recoleta – Alberto de Souza esq Cruz del Chaco</li>
-            <li>Gondola Patagonia Foodpark Mburucuya</li>
-            <li>Bodega del Mundo Palma</li>
+            <li>Refugio Patagonia Recoleta - Asunción – Alberto de Souza esq Cruz del Chaco (de 18 a 23hs, Todos los días)</li>
+            <li>Góndola Patagonia Foodpark Mburucuya - Asunción (de 18 a 23hs, Martes a Domingos)</li>
+            <li>Góndola Patagonia Varea Gourmet - Ciudad del Este (de 18 a 23hs, Martes a Domingos)</li>
+            <li>Gran Via Fuji - Ciudad del Este (de 12 a 21hs, Miércoles a Domingos)</li>
+            <li>Superseis Irrazabal - Encarnación (de 12 a 21hs, Miércoles a Domingos)</li>
           </ul>
-          Podes acercarte con tu voucher electrónico (no es necesario imprimirlo, podés mostrarlo desde la pantalla de tu celular). 
+          Podes acercarte con tu voucher electrónico (no es necesario imprimirlo, podés mostrarlo desde la pantalla de tu celular).
 
 <br><br>En algunas ocasiones tendremos habilitados algunos puntos de canje adicionales, para saber más ingresa a nuestras sociales, Facebook e Instagram.
 
